fixed name not centered

--- a/src/Components/navbar/navbar.css
+++ b/src/Components/navbar/navbar.css
@@ -20,4 +20,6 @@
 
 .name {
   font-size: 1.2rem;
+  display: flex;
+  align-items: center;
 }
